--- a/_posts/2014/2014-05-06-gyp.md
+++ b/_posts/2014/2014-05-06-gyp.md
@@ -6,46 +6,50 @@ categories: [archive]
 tags: [gyp]
 ---
 
-<section>
-	<p>安装</p>
-<pre>
+### > 安装
+
+```bash
 $ git svn clone -r HEAD http://gyp.googlecode.com/svn/trunk/ gyp
 $ cd gyp
 $ ./setup.py build
 $ sudo ./setup.py install
-</pre>
+```
 
-	<p>Hello World</p>
-<pre>
+### > Hello World
+
+```bash
 $ vim main.cpp
-</pre>
-<pre>
+```
+
+```cpp
 #include <stdio.h>
 int main(int argc, char** argv)
 {
      printf("hello world\n");  
-} 
-</pre>
-<pre>
+}
+```
+
+```bash
 $ vim main.gyp
-</pre>
-<pre>
+```
+
+```json
 {
-    'targets': [
+    "targets": [
         {
-            'target_name': 'main',
-            'type': 'executable',
-            'sources': [
-                'main.cpp'
+            "target_name": "main",
+            "type": "executable",
+            "sources": [
+                "main.cpp"
             ]
         }
     ]
 }
-</pre>
-<pre>
+```
+
+```bash
 $ gyp --depth=. main.gyp
 $ open main.xcodeproj
-</pre>
+```
 
-	<p>COMMAND + R 运行</p>
-</section>
+COMMAND + R 运行
