--- a/_posts/2014/2014-06-03-swift.md
+++ b/_posts/2014/2014-06-03-swift.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 title: Swift
-description: 新编程语言
+description: 苹果推出的基于脚本的编程语言
 categories: [archive]
 tags: [swift]
 ---
 
-<section>
-	<p>Hello World</p>
-<pre>
+### > Hello World
+
+```swift
 println("Hello World!!")
-</pre>
-</section>
+```
