--- a/_posts/2015/2015-01-06-unity3d.md
+++ b/_posts/2015/2015-01-06-unity3d.md
@@ -6,9 +6,9 @@ categories: [archive]
 tags: [unity3d]
 ---
 
-<section>
-    <p>1. 获取按钮并设置点击事件</p>
-<pre class="prettyprint">
+### 1. 获取按钮并设置点击事件
+
+```csharp
 using UnityEngine.UI;
 
 var button = transform.Find("Btn_login").gameObject.GetComponent<Button>();
@@ -20,15 +20,15 @@ if (button != null) {
         }
     );
 }
-</pre>
+```
 
-    <p>2. JSON解析</p>
-<pre class="prettyprint">
+### 2. JSON解析
+
+```csharp
 using SimpleJSON;
 
 var json = JSON.Parse("{\"array\":[1,2,3],\"boolean\":true,\"null\":null,\"number\":123,\"object\":{\"a\":\"b\",\"c\":\"d\",\"e\":\"f\"},\"string\":\"Hello World\"}");
 Debug.Log(json["string"].Value);
 Debug.Log(json["boolean"].AsBool);
 Debug.Log(json["array"].AsArray);
-</pre>
-</section>
+```
